--- a/index.html
+++ b/index.html
@@ -1891,10 +1891,52 @@
                     <div class="certificate-item glass rounded-xl p-3 md:p-4">
                         <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
                             <div class="mb-2 sm:mb-0">
+                                <h4 class="font-semibold mb-1 text-sm md:text-base">College Algebra with Python</h4>
+                                <p class="text-xs md:text-sm text-gray-400">300 ساعة تدريبية</p>
+                            </div>
+                            <button onclick="openPDF('شهادة الجبر الجامعي باستخدام بايثون.pdf')" 
+                                    class="cert-button px-3 py-1 md:px-4 md:py-2 bg-purple-500 bg-opacity-20 rounded-lg text-xs md:text-sm hover:bg-opacity-30 w-full sm:w-auto">
+                                <i class="fas fa-eye ml-1"></i>
+                                عرض الشهادة
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="certificate-item glass rounded-xl p-3 md:p-4">
+                        <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
+                            <div class="mb-2 sm:mb-0">
                                 <h4 class="font-semibold mb-1 text-sm md:text-base">Data Visualization</h4>
                                 <p class="text-xs md:text-sm text-gray-400">300 ساعة تدريبية</p>
                             </div>
                             <button onclick="openPDF('شهادة تصوّر البيانات.pdf')" 
+                                    class="cert-button px-3 py-1 md:px-4 md:py-2 bg-purple-500 bg-opacity-20 rounded-lg text-xs md:text-sm hover:bg-opacity-30 w-full sm:w-auto">
+                                <i class="fas fa-eye ml-1"></i>
+                                عرض الشهادة
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="certificate-item glass rounded-xl p-3 md:p-4">
+                        <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
+                            <div class="mb-2 sm:mb-0">
+                                <h4 class="font-semibold mb-1 text-sm md:text-base">Legacy Data Visualization</h4>
+                                <p class="text-xs md:text-sm text-gray-400">300 ساعة تدريبية</p>
+                            </div>
+                            <button onclick="openPDF('شهادة تصور البيانات القديم.pdf')" 
+                                    class="cert-button px-3 py-1 md:px-4 md:py-2 bg-purple-500 bg-opacity-20 rounded-lg text-xs md:text-sm hover:bg-opacity-30 w-full sm:w-auto">
+                                <i class="fas fa-eye ml-1"></i>
+                                عرض الشهادة
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="certificate-item glass rounded-xl p-3 md:p-4">
+                        <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
+                            <div class="mb-2 sm:mb-0">
+                                <h4 class="font-semibold mb-1 text-sm md:text-base">Legacy JavaScript Algorithms and Data Structure</h4>
+                                <p class="text-xs md:text-sm text-gray-400">300 ساعة تدريبية</p>
+                            </div>
+                            <button onclick="openPDF('شهادة لخوارزميات وهياكل البيانات القديمة بلغة جافاسكريبت.pdf')" 
                                     class="cert-button px-3 py-1 md:px-4 md:py-2 bg-purple-500 bg-opacity-20 rounded-lg text-xs md:text-sm hover:bg-opacity-30 w-full sm:w-auto">
                                 <i class="fas fa-eye ml-1"></i>
                                 عرض الشهادة
@@ -2526,4 +2568,3 @@
     </script>
 </body>
 </html>
-
